trying to fix viewport issue on iOS

--- a/style/style.css
+++ b/style/style.css
@@ -24,9 +24,9 @@ body {
   align-self: stretch;
 }
 .polaroids > div {
-  margin: 10px;
+  margin: 5px;
   /*flex: 1;*/
-  min-width: 150px;
+  /*min-width: 150px;*/
 }
 .polaroids div {
   -webkit-transform: rotate(-2deg);
